--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 contracts/node_modules
-app/arenafi-fe/node_modules 
-app/arenafi-fe/.env 
-app/arenafi-fe/.env.local
-app/arenafi-fe/.next/
+arenafi-fe/node_modules 
+arenafi-fe/.next/
+arenafi-fe/.env 
+arenafi-fe/.env.local
