--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,52 @@
-contracts/node_modules
-arenafi-fe/node_modules 
-arenafi-fe/.next/
-arenafi-fe/.env 
-arenafi-fe/.env.local
+# Dependencies
+node_modules/
+*/node_modules/
+**/node_modules/
+
+# Environment files - NEVER COMMIT THESE
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.example
+**/.env
+**/.env.local
+**/.env.development
+**/.env.test
+**/.env.production
+**/.env.example
+
+# Build outputs
+.next/
+dist/
+build/
+artifacts/
+cache/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Hardhat
+artifacts/
+cache/
+typechain/
+typechain-types/
+
+# Specific files to ignore
 server/src/tests/integration.test.ts
 contracts/ignition/modules/arena.ts
-server/node_modules
-server/.env
-server/.env.local
