--- a/arenafi-fe/package.json
+++ b/arenafi-fe/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@metamask/sdk": "^0.33.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@prisma/client": "^6.17.1",
     "@pythnetwork/hermes-client": "^2.0.0",
     "@radix-ui/react-checkbox": "^1.3.1",
