Remove cached environment files and update gitignore
- Remove server/.env.test, server/.env.example, contracts/.env from Git tracking
- Update .gitignore with comprehensive environment file exclusion patterns
- Prevent future accidental commits of sensitive environment files

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ typechain-types/
 # Specific files to ignore
 server/src/tests/integration.test.ts
 contracts/ignition/modules/arena.ts
+
+contracts/.env
+server/.env
+server/.env.test    
+contracts/contracts/.env
+contracts/contracts/.env.test
+server/.env.example
+server/.env.test
